--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -17,12 +17,10 @@ jobs:
           mdbook-version: '0.4.29'
 
       - run: mdbook build
-
-      - name: Move mdbook to docs dir         
-        run: mv book docs 
+      
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.TOKEN }}
-          publish_dir: ./docs
+          publish_dir: ./book
 
